--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,13 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.7.2-stretch-node
+      - image: circleci/ruby:2.6.3-stretch-node
     executor: ruby/default
     steps:
       - checkout
+      - run:
+          name: Which bundler?
+          command: bundle -v
       - ruby/bundle-install
 
 # Invoke jobs via workflows
