--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - checkout
       - run:
           name: Which bundler?
-          command: bundle update --bundler
+          command: sudo gem install bundler -v 2.2.30
       - ruby/bundle-install
 
 # Invoke jobs via workflows
@@ -28,3 +28,4 @@ workflows:
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - build
+g
