--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,13 @@ jobs:
           command: sudo gem install bundler -v 2.2.30
       - ruby/bundle-install
 
+      - run:
+        name: DB setup
+        command: rails db:{create,migrate}
+      - run:
+        name: RSpec
+        command: bundle exec rspec
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
