--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,15 @@ jobs:
   build:
     docker:
       - image: circleci/ruby:2.7.2
+      environment:
+          RAILS_ENV: test
+          PGHOST: 127.0.0.1
+          DATABASE_URL: postgres://bonez-be-user@127.0.0.1/myapp-test
+
+      - image: circleci/postgres:13
+              POSTGRES_DB: myapp-test
+              POSTGRES_USER: myapp-user
+
     executor: ruby/default
     steps:
       - checkout
@@ -20,6 +29,7 @@ jobs:
           name: Which bundler?
           command: sudo gem install bundler -v 2.2.30
       - ruby/bundle-install
+      - run: bundle exec rspec
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
