--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,14 +13,14 @@ jobs:
   build:
     docker:
       - image: circleci/ruby:2.7.2
-      environment:
+      - environment:
           RAILS_ENV: test
           PGHOST: 127.0.0.1
           DATABASE_URL: postgres://bonez-be-user@127.0.0.1/bonez-be_test
 
       - image: circleci/postgres:13
-        POSTGRES_DB: myapp-test
-        POSTGRES_USER: myapp-user
+          POSTGRES_DB: myapp-test
+          POSTGRES_USER: myapp-user
 
     executor: ruby/default
     steps:
