--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,19 +13,14 @@ jobs:
   build:
     docker:
       - image: circleci/ruby:2.7.2
-      - environment:
-          RAILS_ENV: test
-          PGHOST: 127.0.0.1
-          DATABASE_URL: postgres://bonez-be-user@127.0.0.1/bonez-be_test
-
-    executor: ruby/default
+    executor: ruby-postgres
     steps:
       - checkout
       - run:
           name: Which bundler?
           command: sudo gem install bundler -v 2.2.30
       - ruby/bundle-install
-
-
-      - run: bundle exec rspec
-
+      - resolve-dependencies
+      - run-linter
+      - setup-postgres
+      - run-tests-rails
