--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,15 +12,14 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.7.2
-
-    executor: ruby-postgres
+      - image: circleci/ruby:2.7.2-stretch-node
+    executor: ruby/default
     steps:
       - checkout
       - run:
           name: Which bundler?
-          command: sudo gem install bundler -v 2.2.30
-      - run: bundle exec rspec
+          command: sudo gem install bundler:2.2.30
+      - ruby/bundle-install
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
