Add circle ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,11 @@ jobs:
   build:
     docker:
       - image: circleci/ruby:2.7.2
+      - image: postgres:9.6.2-alpine
+        environment:
+          POSTGRES_USER: postgres
+          POSTGRES_DB: postgres_test
+
     executor: ruby/default
     steps:
       - checkout
@@ -21,17 +26,13 @@ jobs:
           command: sudo gem install bundler -v 2.2.30
       - ruby/bundle-install
 
-      - run: mv config/database.yml.sample config/database.yml
+      - run: config/database.yml
       - run: RAILS_ENV=test bundle exec rake db:create
       - run: bundle exec rake db:setup
 
   # Run the tests
       - type: shell
-        command: |
-          bundle exec rspec --profile 10 \
-                            --out test_results/rspec.xml \
-                            --format progress \
-                            $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
+        command: bundle exec rspec
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
