--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,7 @@ jobs:
       - run: bundle exec rake db:setup
 
   # Run the tests
-      - type: shell
-        command: bundle exec rspec
+      - run: bundle exec rspec
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
