--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rbenv:
 addons:
   postgresql: 9.6
 script:
+- bundle update --bundler
 - bundle exec rails db:{create,migrate} RAILS_ENV=test
 - bundle exec rspec
 deploy:
