--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: ruby
 rbenv:
 - 2.7.2
+script:
+  - sudo gem install bundler -v 2.2.30
 addons:
   postgresql: 9.6
 script:
-- bundle update --bundler
 - bundle exec rails db:{create,migrate} RAILS_ENV=test
 - bundle exec rspec
 deploy:
