--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: ruby
 rbenv:
 - 2.7.2
 addons:
-  postgresql: 9.6
+  postgresql: 13
 script:
-- bundle exec rake db:{create,migrate} RAILS_ENV=test
+- rails db:{create,migrate} RAILS_ENV=test
 - bundle exec rspec
 deploy:
   provider:
