--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: ruby
 rbenv:
 - 2.7.2
+before_install:
+  - yes | gem update --system --force
+  - gem install bundler -v 2.2.30
 addons:
-  postgresql: 13
+  postgresql: 9.6
 script:
-- rails db:{create,migrate} RAILS_ENV=test
+- bundle exec rails db:{create,migrate} RAILS_ENV=test
 - bundle exec rspec
 deploy:
   provider:
