--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: ruby
 rbenv:
 - 2.7.2
 before_install:
-- yes | gem update --system --force
 - gem install bundler -v 2.2.30
+- bundle lock --add-platform x86_64-linux
+- bundle install
 addons:
   postgresql: 9.6
 script:
