--- a/spec/vcr/YelpClient/returns_results_for_a_specific_location.yml
+++ b/spec/vcr/YelpClient/returns_results_for_a_specific_location.yml
@@ -24,36 +24,36 @@ http_interactions:
       - keep-alive
       Content-Type:
       - application/json
-      X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-57mgp; site=public_api_v3
-      Server:
-      - envoy
-      X-Zipkin-Id:
-      - 03f62e540b25dc0a
-      Ratelimit-Remaining:
-      - '4991'
-      X-B3-Sampled:
-      - '0'
-      Ratelimit-Resettime:
-      - '2021-11-04T00:00:00+00:00'
       Ratelimit-Dailylimit:
       - '5000'
+      X-Zipkin-Id:
+      - 2220f89cd3cd330a
+      Ratelimit-Remaining:
+      - '4989'
+      Ratelimit-Resettime:
+      - '2021-11-04T00:00:00+00:00'
+      X-B3-Sampled:
+      - '0'
+      X-Routing-Service:
+      - routing-main--uswest2-74fc997579-7d27w; site=public_api_v3
+      Server:
+      - envoy
       X-Cloudmap:
-      - routing_useast1
+      - routing_uswest2
       X-Proxied:
-      - 10-65-190-140-useast1bprod
+      - 10-69-185-39-uswest2bprod
       X-Extlb:
-      - 10-65-190-140-useast1bprod
+      - 10-69-185-39-uswest2bprod
       Cache-Control:
       - max-age=0, no-store, private, no-transform
       Accept-Ranges:
       - bytes
       Date:
-      - Wed, 03 Nov 2021 21:58:06 GMT
+      - Wed, 03 Nov 2021 22:47:15 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-ewr18120-EWR
+      - cache-den8247-DEN
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -85,6 +85,17 @@ http_interactions:
         "", "city": "Denver", "zip_code": "80218", "country": "US", "state": "CO",
         "display_address": ["1201 E Colfax Ave", "Denver, CO 80218"]}, "phone": "+13038391394",
         "display_phone": "(303) 839-1394", "distance": 541.9058239564879}, {"id":
+        "whMF9UFpUrtalDgqr_yENw", "alias": "kingas-lounge-denver", "name": "Kinga''s
+        Lounge", "image_url": "https://s3-media2.fl.yelpcdn.com/bphoto/NbU1S5qAAFz2g_4tjLeqFA/o.jpg",
+        "is_closed": false, "url": "https://www.yelp.com/biz/kingas-lounge-denver?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=OBMoK3r2ftITcAO2w2E5Ew",
+        "review_count": 267, "categories": [{"alias": "lounges", "title": "Lounges"},
+        {"alias": "polish", "title": "Polish"}, {"alias": "breakfast_brunch", "title":
+        "Breakfast & Brunch"}], "rating": 3.5, "coordinates": {"latitude": 39.74019,
+        "longitude": -104.9723099}, "transactions": ["delivery", "pickup"], "price":
+        "$$", "location": {"address1": "1509 Marion St", "address2": "", "address3":
+        "", "city": "Denver", "zip_code": "80218", "country": "US", "state": "CO",
+        "display_address": ["1509 Marion St", "Denver, CO 80218"]}, "phone": "+13038306922",
+        "display_phone": "(303) 830-6922", "distance": 547.1323479378951}, {"id":
         "-7AgflI0MNLAimyFb6T5tQ", "alias": "good-times-burgers-and-frozen-custard-denver-11",
         "name": "Good Times Burgers & Frozen Custard", "image_url": "https://s3-media1.fl.yelpcdn.com/bphoto/egcncqdw79ndZ5f3nVVVyQ/o.jpg",
         "is_closed": false, "url": "https://www.yelp.com/biz/good-times-burgers-and-frozen-custard-denver-11?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=OBMoK3r2ftITcAO2w2E5Ew",
@@ -156,7 +167,7 @@ http_interactions:
         Bars"}, {"alias": "breakfast_brunch", "title": "Breakfast & Brunch"}, {"alias":
         "tradamerican", "title": "American (Traditional)"}], "rating": 4.0, "coordinates":
         {"latitude": 39.74348117433856, "longitude": -104.97365978220878}, "transactions":
-        ["pickup", "delivery"], "price": "$$", "location": {"address1": "1035 E 17th
+        ["delivery", "pickup"], "price": "$$", "location": {"address1": "1035 E 17th
         Ave", "address2": null, "address3": "", "city": "Denver", "zip_code": "80218",
         "country": "US", "state": "CO", "display_address": ["1035 E 17th Ave", "Denver,
         CO 80218"]}, "phone": "+17204855503", "display_phone": "(720) 485-5503", "distance":
@@ -207,7 +218,7 @@ http_interactions:
         "review_count": 458, "categories": [{"alias": "tradamerican", "title": "American
         (Traditional)"}, {"alias": "sportsbars", "title": "Sports Bars"}, {"alias":
         "musicvenues", "title": "Music Venues"}], "rating": 3.5, "coordinates": {"latitude":
-        39.7342314, "longitude": -104.986504}, "transactions": ["pickup", "delivery"],
+        39.7342314, "longitude": -104.986504}, "transactions": ["delivery", "pickup"],
         "price": "$$", "location": {"address1": "1111 Lincoln St", "address2": "",
         "address3": "", "city": "Denver", "zip_code": "80203", "country": "US", "state":
         "CO", "display_address": ["1111 Lincoln St", "Denver, CO 80203"]}, "phone":
@@ -243,8 +254,19 @@ http_interactions:
         "", "address3": "", "city": "Denver", "zip_code": "80203", "country": "US",
         "state": "CO", "display_address": ["975 Lincoln St", "Denver, CO 80203"]},
         "phone": "+13037311100", "display_phone": "(303) 731-1100", "distance": 1440.6745977785263},
-        {"id": "3asUEG-iok2bunLBp1O_mw", "alias": "lowdown-brewery-kitchen-denver",
-        "name": "Lowdown Brewery + Kitchen", "image_url": "https://s3-media2.fl.yelpcdn.com/bphoto/4BVCLbTZXqdo_rDVwc5Ezg/o.jpg",
+        {"id": "YB-th2or0P4qyeF15SVrog", "alias": "vesper-lounge-denver", "name":
+        "Vesper Lounge", "image_url": "https://s3-media2.fl.yelpcdn.com/bphoto/3zjyoEBbVjGMNLS2RX65Pg/o.jpg",
+        "is_closed": false, "url": "https://www.yelp.com/biz/vesper-lounge-denver?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=OBMoK3r2ftITcAO2w2E5Ew",
+        "review_count": 157, "categories": [{"alias": "tradamerican", "title": "American
+        (Traditional)"}, {"alias": "cocktailbars", "title": "Cocktail Bars"}, {"alias":
+        "lounges", "title": "Lounges"}], "rating": 4.0, "coordinates": {"latitude":
+        39.727429, "longitude": -104.983912}, "transactions": ["delivery"], "price":
+        "$$", "location": {"address1": "233 E 7th Ave", "address2": "", "address3":
+        "", "city": "Denver", "zip_code": "80203", "country": "US", "state": "CO",
+        "display_address": ["233 E 7th Ave", "Denver, CO 80203"]}, "phone": "+17203280314",
+        "display_phone": "(720) 328-0314", "distance": 1475.1617370380188}, {"id":
+        "3asUEG-iok2bunLBp1O_mw", "alias": "lowdown-brewery-kitchen-denver", "name":
+        "Lowdown Brewery + Kitchen", "image_url": "https://s3-media2.fl.yelpcdn.com/bphoto/4BVCLbTZXqdo_rDVwc5Ezg/o.jpg",
         "is_closed": false, "url": "https://www.yelp.com/biz/lowdown-brewery-kitchen-denver?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=OBMoK3r2ftITcAO2w2E5Ew",
         "review_count": 493, "categories": [{"alias": "breweries", "title": "Breweries"},
         {"alias": "newamerican", "title": "American (New)"}, {"alias": "pizza", "title":
@@ -253,29 +275,7 @@ http_interactions:
         "location": {"address1": "800 Lincoln St", "address2": "", "address3": "",
         "city": "Denver", "zip_code": "80203", "country": "US", "state": "CO", "display_address":
         ["800 Lincoln St", "Denver, CO 80203"]}, "phone": "+17205248065", "display_phone":
-        "(720) 524-8065", "distance": 1491.6134415581314}, {"id": "7IOQ3CX1OXc6TjC59WbUNw",
-        "alias": "burgerfi-denver", "name": "BurgerFi", "image_url": "https://s3-media1.fl.yelpcdn.com/bphoto/3mR9kLD5K_ebJAho2ere6w/o.jpg",
-        "is_closed": false, "url": "https://www.yelp.com/biz/burgerfi-denver?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=OBMoK3r2ftITcAO2w2E5Ew",
-        "review_count": 320, "categories": [{"alias": "hotdog", "title": "Hot Dogs"},
-        {"alias": "burgers", "title": "Burgers"}, {"alias": "tradamerican", "title":
-        "American (Traditional)"}], "rating": 3.5, "coordinates": {"latitude": 39.734932,
-        "longitude": -104.98783}, "transactions": ["delivery", "pickup"], "price":
-        "$$", "location": {"address1": "1147 Broadway", "address2": "Unit 101", "address3":
-        "", "city": "Denver", "zip_code": "80203", "country": "US", "state": "CO",
-        "display_address": ["1147 Broadway", "Unit 101", "Denver, CO 80203"]}, "phone":
-        "+17203905046", "display_phone": "(720) 390-5046", "distance": 1505.0956922021933},
-        {"id": "OgVfMvYT-omfqwOwLP2V5w", "alias": "d-bar-denver-denver-3", "name":
-        "D Bar Denver", "image_url": "https://s3-media2.fl.yelpcdn.com/bphoto/4Z94lSFa4EGnTlKHRRfF4Q/o.jpg",
-        "is_closed": false, "url": "https://www.yelp.com/biz/d-bar-denver-denver-3?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=OBMoK3r2ftITcAO2w2E5Ew",
-        "review_count": 956, "categories": [{"alias": "desserts", "title": "Desserts"},
-        {"alias": "tradamerican", "title": "American (Traditional)"}, {"alias": "breakfast_brunch",
-        "title": "Breakfast & Brunch"}], "rating": 4.0, "coordinates": {"latitude":
-        39.7461693, "longitude": -104.9811474}, "transactions": ["delivery", "pickup"],
-        "price": "$$", "location": {"address1": "494 E 19th Ave", "address2": "",
-        "address3": "", "city": "Denver", "zip_code": "80203", "country": "US", "state":
-        "CO", "display_address": ["494 E 19th Ave", "Denver, CO 80203"]}, "phone":
-        "+13038614710", "display_phone": "(303) 861-4710", "distance": 1506.6528099606383}],
-        "total": 240, "region": {"center": {"longitude": -104.97024536132812, "latitude":
-        39.73552421220229}}}'
-  recorded_at: Wed, 03 Nov 2021 21:58:06 GMT
+        "(720) 524-8065", "distance": 1491.6134415581314}], "total": 240, "region":
+        {"center": {"longitude": -104.97024536132812, "latitude": 39.73552421220229}}}'
+  recorded_at: Wed, 03 Nov 2021 22:47:15 GMT
 recorded_with: VCR 6.0.0
